--- a/index.html
+++ b/index.html
@@ -3,73 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Counting Principles - MAD Slides</title>
+  <title>MST Algorithms - MAD Slides</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&display=swap">
 </head>
 <body>
   <nav class="nav">
     <ul class="nav-list">
-        <li class="nav-item active" data-key="Addition">Addition</li>
-        <li class="nav-item" data-key="Multiplication">Multiplication</li>
-        <li class="nav-item" data-key="Arrangement">Arrangement</li>
-        <li class="nav-item" data-key="Combination">Combination</li>
-        <li class="nav-item" data-key="Permutation">Permutation</li>
-        <li class="nav-item" data-key="Division">Division</li>
-        <li class="nav-item" data-key="Pigeonhole">Pigeonhole</li>
-        <li class="nav-item" data-key="Inclusion-Exclusion">Inclusion-Exclusion</li>
+        <li class="nav-item active" data-key="Introduction to MST">MST</li>
+        <li class="nav-item" data-key="Intro to Greedy Als">Greedy</li>
+        <li class="nav-item" data-key="Prim's Algorithm">Prim</li>
+        <li class="nav-item" data-key="Kruskal's Al">Kruskal</li>
+        <li class="nav-item" data-key="Prim Pseudocode">Prim Code</li>
+        <li class="nav-item" data-key="Kruskal Pseudocode">Kruskal Code</li>
+        <li class="nav-item" data-key="Comparison">Comparison</li>
+        <li class="nav-item" data-key="Complexity">Complexity</li>
         <div class="nav-underline" id="nav-underline"></div>
     </ul>
-    
   </nav>
 
   <div class="content-tab" id="content-tab">
-    <div class="background-title" id="background-title">ADDITION</div>
+    <div class="background-title" id="background-title">MST</div>
     <div class="background-underline"></div>
-      <h2 id="content-title" style="margin-bottom: 20px; color: #00ffff;"></h2>
+    <h2 id="content-title" style="margin-bottom: 20px; color: #00ffff;"></h2>
 
+    <div class="content-section" id="content-theory"></div>
+    <div class="content-section" id="content-formula"></div>
+    <div class="content-section" id="content-example"></div>
+  </div>
 
-<div class="content-section" id="content-theory"></div>
-<div class="content-section" id="content-formula"></div>
-<div class="content-section" id="content-example"></div>
-
-</div>
-
-
-<div class="clock-container">
-  <div class="clock">
-    <div class="clock-date">
-      <div id="day-name"></div>
-      <div id="full-date"></div>
-    </div>
-    <div class="clock-time">
-      <svg viewBox="0 0 100 100" class="progress-circle">
-        <circle cx="50" cy="50" r="45" class="background" />
-        <circle cx="50" cy="50" r="45" class="progress" />
-      </svg>
-      <div id="time">00:00</div>
+  <div class="clock-container">
+    <div class="clock">
+      <div class="clock-date">
+        <div id="day-name"></div>
+        <div id="full-date"></div>
+      </div>
+      <div class="clock-time">
+        <svg viewBox="0 0 100 100" class="progress-circle">
+          <circle cx="50" cy="50" r="45" class="background" />
+          <circle cx="50" cy="50" r="45" class="progress" />
+        </svg>
+        <div id="time">00:00</div>
+      </div>
     </div>
   </div>
-</div>
-
-
 
   <div class="timeline-nav">
-  <div class="timeline-line"></div>
-  <ul class="timeline-list">
-    <li class="timeline-dot active" data-label="1. Theory"></li>
-    <li class="timeline-dot" data-label="2. Formula"></li>
-    <li class="timeline-dot" data-label="3. Example"></li>
-  </ul>
-</div>
+    <div class="timeline-line"></div>
+    <ul class="timeline-list">
+      <li class="timeline-dot active" data-label="1. Theory"></li>
+      <li class="timeline-dot" data-label="2. Formula"></li>
+      <li class="timeline-dot" data-label="3. Example"></li>
+    </ul>
+  </div>
 
-
-
-<!--PRINCIPLES-->
-    <div class="floating-icon">
-  <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/67889110_bDP1cqrg75Oh0WE.gif?1689446913" alt="Mascot" />
-</div>
-
+  <div class="floating-icon">
+    <img src='../Presentation/img/terenry.gif' alt="Mascot" />
+  </div>
 
   <script src="js/script.js"></script>
 </body>
