--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 
   <div class="floating-icon">
-    <img src='../img/terenry.gif' alt="Mascot" />
+    <img src="../img/terenry.gif" alt="Mascot" />
   </div>
 
   <script src="js/script.js"></script>
